[package]
name = "xim"
version = "0.4.2"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
edition = "2018"

[dependencies]
chan         = "*"
chan-signal  = "*"
clipboard    = "*"
clippy       = {version = "*", optional = true}
docopt       = "*"
hex          = "*"
serde        = "*"
serde_derive = "*"
termion      = "*"

[dev-dependencies]
quickcheck        = "*"
quickcheck_macros = "*"

[features]
default = []
